@@ -1,3 +1,7 @@
+2009-02-02  Christian Franke  <franke@computer.org>
+
+	* lib/hexdump.c (hexdump): Print at most 3 lines if data is identical.
+
 2009-02-01  Felix Zielcke  <fzielcke@z-51.de>
 
 	* INSTALL: Note that we now require at least autconf 2.59 and that LZO
